--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         </div>
         <button type="button" class="btn btn-primary btn-lg mt-3">Submit</button>
     </div>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>    
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/script.js"></script>    
 </body>
 </html>
