--- a/register.html
+++ b/register.html
@@ -18,16 +18,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="signin.html">Sign in</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="register.html">Register</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
@@ -40,7 +37,14 @@
     </header>
     <div class="h-100 d-flex  justify-content-center align-items-center">
         <form class="was-validated d-flex flex-column justify-content-center align-items-center">
-            <h1 class="h1 mb-3 fw-light">Please sign in</h1>
+            <h1 class="h1 mb-3 fw-light">Please register an account</h1>
+            
+            <div class="form-floating mb-3">
+                <input type="name" class="form-control" id="username" placeholder="username" required>
+                <label for="floatingInput">Username</label>
+                <div class="valid-feedback">Valid</div>
+                <div class="invalid-feedback">please write a valid username</div>
+            </div>
             <div class="form-floating mb-3">
                 <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
                 <label for="floatingInput">Email address</label>
@@ -53,10 +57,11 @@
                 <div class="valid-feedback">Valid password</div>
                 <div class="invalid-feedback mb-3">please write a password</div>
             </div>
-            <button id="submit" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button id="submit" class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
+            <a class="send_to_signin" href="/signin.html">Sign in </a>
         </form>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/login.js"></script>    
+    <script src="/js/register.js"></script>    
 </body>
 </html>
