workon on login and logout functionality

--- a/profile.html
+++ b/profile.html
@@ -47,6 +47,7 @@
                         <h6 class="card-subtitle mb-1 text-muted mt-4">About</h6>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae temporib amet consectetur adipisicing elit. Molestiae temporib</p>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae temporib amet consectetur adipisicing elit. Molestiae temporib</p>
+                        <a class="logout">Log out</a>
                     </div>
                 </div>
                 <div class="card mt-3">
@@ -111,6 +112,7 @@
             </div>
         </div>
     </div>
-    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>    
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/logout.js"></script>    
 </body>
 </html>
