--- a/register.html
+++ b/register.html
@@ -24,7 +24,10 @@
                         <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="signin.html">Sign in</a>
+                        <a class="nav-link" href="signin.html">Sign in</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="register.html">Register</a>
                     </li>
                 </ul>
                 <form class="d-flex" role="search">
