chnaging file structure

--- a/profile.html
+++ b/profile.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="signin.html">Sign in</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -113,6 +116,6 @@
         </div>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/logout.js"></script>    
+    <script type="module" src="/js/logout.mjs"></script>    
 </body>
 </html>
