--- a/register.html
+++ b/register.html
@@ -65,6 +65,6 @@
         </form>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/register.js"></script>    
+    <script type="module" src="/js/register.mjs"></script>     
 </body>
 </html>
