--- a/signin.html
+++ b/signin.html
@@ -57,6 +57,6 @@
         </form>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/signin.js"></script>    
+    <script type="module" src="/js/signin.mjs"></script>    
 </body>
 </html>
