--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="signin.html">Sign in</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="register.html">Register</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
