workin on retriving the posts from the API

--- a/profile.html
+++ b/profile.html
@@ -116,6 +116,7 @@
         </div>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/js/logout.mjs"></script>    
+    <script type="module" src="/js/logout.mjs"></script>
+    <script type="module" src="/js/post_feed.mjs"></script>    
 </body>
 </html>
