workin on retriving posts from the API

--- a/profile.html
+++ b/profile.html
@@ -91,7 +91,7 @@
                 </div>
             </div>
             <div class="col-sm-7">
-                <div class="card mb-3">
+                <!--<div class="card mb-3">
                     <img src="images/landscape-gba1747592_1920.jpg" class="card-img-top" alt="black and white picture of a huge cliff by the ocean">
                     <div class="card-body">
                         <h5 class="card-title">Andrew</h5>
@@ -111,7 +111,7 @@
                         <h5 class="card-title">Kelly</h5>
                         <p class="card-text"><small class="text-muted">Published 3 days ago</small></p>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
