wokrin on email validation

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         </div>
     </nav>
     </header>
-    <div class="d-flex flex-column justify-content-center align-items-center w-100 mt-5">
+    <div class="home-posts d-flex flex-column justify-content-center align-items-center w-100 mt-5">
         <h1 class="mb-3 fw-light">Feed</h1>
-        <div class="card mb-3 w-75">
+        <!--<div class="card mb-3 w-75">
             <img src="images/landscape-gba1747592_1920.jpg" class="card-img-top" alt="black and white picture of a huge cliff by the ocean">
             <div class="card-body">
                 <h5 class="card-title">Andrew</h5>
@@ -60,7 +60,7 @@
                 <h5 class="card-title">Kelly</h5>
                 <p class="card-text"><small class="text-muted">Published 3 days ago</small></p>
             </div>
-        </div>
+        </div>-->
     </div>
     <div class="d-flex flex-column justify-content-center align-items-center w-100 bg-light pb-5">
         <h2 class="mt-3">New Post</h2>
@@ -71,6 +71,6 @@
         <button type="button" class="btn btn-primary btn-lg mt-3">Submit</button>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/script.js"></script>    
+    <script type="module" src="js/post_feed_home.mjs"></script>    
 </body>
 </html>
