--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
                         <div class="w-100">
                             <img src="images/man-g39c34cdac_640.jpg" class="mx-auto d-block bd-placeholder-img rounded-circle img-fluid" width="120" height="120"  alt="...">
                         </div>
-                        <h5 class="card-title mt-3 card-text text-center">Jerry Maguire</h5>
+                        <h5 class="card-title mt-3 card-text text-center"></h5>
                         <h6 class="card-subtitle mb-1 text-muted mt-4">About</h6>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae temporib amet consectetur adipisicing elit. Molestiae temporib</p>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae temporib amet consectetur adipisicing elit. Molestiae temporib</p>
@@ -91,32 +91,13 @@
                 </div>
             </div>
             <div class="col-sm-7">
-                <!--<div class="card mb-3">
-                    <img src="images/landscape-gba1747592_1920.jpg" class="card-img-top" alt="black and white picture of a huge cliff by the ocean">
-                    <div class="card-body">
-                        <h5 class="card-title">Andrew</h5>
-                        <p class="card-text"><small class="text-muted">Published 3 hours ago</small></p>
-                    </div>
-                </div>
-                <div class="card mb-3">
-                    <img src="images/athens-gbbb648c7a_1920.jpg" class="card-img-top" alt="Picture of an ancient greek building on a hill top">
-                    <div class="card-body">
-                        <h5 class="card-title">Jennifer</h5>
-                        <p class="card-text"><small class="text-muted">Published 1 day ago</small></p>
-                    </div>
-                </div>
-                <div class="card mb-5">
-                    <img src="images/lake-g50c573c2d_1920.jpg" class="card-img-top" alt="Picture of a sunset by the ocean with two row-boats next to each other">
-                    <div class="card-body">
-                        <h5 class="card-title">Kelly</h5>
-                        <p class="card-text"><small class="text-muted">Published 3 days ago</small></p>
-                    </div>
-                </div>-->
+                
             </div>
         </div>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/js/logout.mjs"></script>
-    <script type="module" src="/js/post_feed.mjs"></script>    
+    <script type="module" src="/js/post_feed.mjs"></script>
+    <script type="module" src="/js/profile.mjs"></script>    
 </body>
 </html>
