workin on the search functionality for the post feed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </nav>
     </header>
     <div class="home-posts d-flex flex-column justify-content-center align-items-center w-100 mt-5">
-        <h1 class="mb-3 fw-light">Feed</h1>
+        
+        <!--<h1 class="mb-3 fw-light">Feed</h1>-->
         <!--<div class="card mb-3 w-75">
             <img src="images/landscape-gba1747592_1920.jpg" class="card-img-top" alt="black and white picture of a huge cliff by the ocean">
             <div class="card-body">
@@ -71,6 +72,7 @@
         <button type="button" class="btn btn-primary btn-lg mt-3">Submit</button>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="js/post_feed_home.mjs"></script>    
+    <script type="module" src="js/post_feed_home.mjs"></script>
+    <script type="module" src="js/search_filter.mjs"></script>     
 </body>
 </html>
