changing file structure and restrucutring the code

--- a/profile.html
+++ b/profile.html
@@ -90,7 +90,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-7">
+            <div class="posts-feed col-sm-7">
                 
             </div>
         </div>
