--- a/register.html
+++ b/register.html
@@ -29,6 +29,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="register.html">Register</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="create_post.html">Create post</a>
+                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
