workin on removing post by id

--- a/create_post.html
+++ b/create_post.html
@@ -45,6 +45,7 @@
         <div class="d-flex justify-content-center">
             <div class="col-12 col-md-6">
                 <form id="create_post">
+                    <h1 class="create_post_h1">create post</h1>
                     <div class="form-group mb-4">
                       <label for="">title</label>
                       <input type="text" class="form-control" id="formGroupExampleInput1" name="title" required>
