--- a/post.html
+++ b/post.html
@@ -47,6 +47,7 @@
     </div>
     <div class="button_update d-flex justify-content-center align-items-center ">
         <button class="update_post_button mb-4">Update</button>
+        <button class="remove_post_button mb-4">Remove</button>
     </div>
     
 
