workin with avatar url registration

--- a/create_post.html
+++ b/create_post.html
@@ -65,9 +65,7 @@
                         <label for="">media</label>
                         <input type="url" class="form-control" id="formGroupExampleInput4" name="media">
                     </div>
-                      
-                     <!-- <button type="button" class="create_post_button btn btn-primary btn-lg mt-3">create post</button>-->
-                     <button class="btn btn-success">create</button>
+                    <button class="btn btn-outline-primary" type="submit">create</button>
                   </form>
 
             </div>
