--- a/register.html
+++ b/register.html
@@ -52,7 +52,7 @@
                 <div class="invalid-feedback">please write a valid username</div>
             </div>
             <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+                <input type="email" class="form-control" id="floatingInput" placeholder="@noroff.no" required>
                 <label for="floatingInput">Email address</label>
                 <div class="valid-feedback">Valid</div>
                 <div class="invalid-feedback">please write a valid email address</div>
@@ -63,8 +63,16 @@
                 <div class="valid-feedback">Valid password</div>
                 <div class="invalid-feedback mb-3">please write a password</div>
             </div>
-            <button id="submit" class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
-            <a class="send_to_signin" href="/signin.html">Sign in </a>
+            <div class="form-floating">
+                <input type="url" class="form-control" id="avatar" placeholder="avatar" required>
+                <label for="floatingInput">avatar / not requierd</label>
+                <div class="valid-feedback">Valid url</div>
+                <div class="invalid-feedback mb-3">invalid url</div>
+                
+               
+            </div>
+            <button id="submit" class="btn btn-lg btn-primary" type="submit">Register</button>
+            <a class="send_to_signin" href="/signin.html">Sign in</a>
         </form>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
