--- a/signin.html
+++ b/signin.html
@@ -56,7 +56,7 @@
                 <div class="valid-feedback">Valid password</div>
                 <div class="invalid-feedback mb-3">please write a password</div>
             </div>
-            <button id="submit" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button id="submit" class="btn btn-lg btn-primary" type="submit">Sign in</button>
         </form>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
