--- a/profile.html
+++ b/profile.html
@@ -46,9 +46,7 @@
             <div class="col-sm-3">
                 <div class="card">
                     <div class="card-body">
-                        <div class="w-100">
-                            
-                        </div>
+                        <div class="w-100"></div>
                         <h5 class="card-title mt-3 card-text text-center"></h5>
                         <h6 class="card-subtitle mb-1 text-muted mt-4">About</h6>
                         <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestiae temporib amet consectetur adipisicing elit. Molestiae temporib</p>
@@ -93,9 +91,7 @@
                     </div>
                 </div>
             </div>
-            <div class="posts-feed col-sm-7">
-                
-            </div>
+            <div class="posts-feed col-sm-7"></div>
         </div>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
