--- a/index.html
+++ b/index.html
@@ -42,7 +42,17 @@
     </nav>
     </header>
     <div class="d-flex flex-column justify-content-center align-items-center w-100 mt-5  pb-5">
-        <h1 class="mb-3 fw-light text-primary">Feed</h1>
+        <h1 class="mb-3 fw-light">Feed</h1>
+        
+        <div class="btn-group dropend">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                Filter posts
+            </button>
+            <ul class="dropdown-menu">
+                <li><a class="today dropdown-item" href="#">today</a></li>
+                <li><a class="yesterday dropdown-item" href="#">yesterday</a></li>
+                <li><a class="dropdown-item" href="#"></a></li>
+            </ul>
     </div>
     <div class="posts-feed d-flex flex-column justify-content-center align-items-center w-100 mt-5">
     </div>
