fixing some smaller issues regarding accessibility for the user if not logged in

--- a/create_post.html
+++ b/create_post.html
@@ -90,6 +90,7 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     
     <script type="module" src="js/posts/create.mjs"></script>
+    <script type="module" src="js/redirect.mjs"></script>
         
 </body>
 </html>
