--- a/post.html
+++ b/post.html
@@ -66,7 +66,7 @@
                       </div>
                       <div class="form-group mb-4">
                         <label for="">media</label>
-                        <input type="url" class="form-control" id="media" name="media" required>
+                        <input type="url" class="form-control" id="media" name="media">
                       </div>
                       <button class="btn btn-outline-primary mb-5" type="submit">update post</button>
                     </form>
@@ -79,5 +79,6 @@
     <script type="module" src="js/post_by_id.mjs"></script>   
     <script type="module" src="js/posts/update.mjs"></script>  
     <script type="module" src="js/posts/remove.mjs"></script>
+    <script type="module" src="js/redirect.mjs"></script>
 </body>
 </html>
