--- a/profile.html
+++ b/profile.html
@@ -98,6 +98,7 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="/js/logout.mjs"></script>
     <script type="module" src="/js/post_feed_profile.mjs"></script>
-    <script type="module" src="/js/profile.mjs"></script>    
+    <script type="module" src="/js/profile.mjs"></script>
+    <script type="module" src="js/redirect.mjs"></script>    
 </body>
 </html>
