--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item" id="home">
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="profile">
                         <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="signin.html">Sign in</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" >
                         <a class="nav-link" href="register.html">Register</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item" id="create">
                         <a class="nav-link" href="create_post.html">Create post</a>
                     </li>
                 </ul>
@@ -60,6 +60,7 @@
     <script type="module" src="js/post_feed_home.mjs"></script>
     <script type="module" src="js/search_filter.mjs"></script>
     <script type="module" src="js/posts/create.mjs"></script>
+    <script type="module" src="js/redirect.mjs"></script>
         
 </body>
 </html>
