--- a/signin.html
+++ b/signin.html
@@ -17,10 +17,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+                    <li class="nav-item hide">
                         <a class="nav-link" aria-current="page" href="index.html">Home</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item hide">
                         <a class="nav-link" href="profile.html">Profile</a>
                     </li>
                     <li class="nav-item">
@@ -29,7 +29,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="register.html">Register</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item hide">
                         <a class="nav-link" href="create_post.html">Create post</a>
                     </li>
                 </ul>
@@ -60,6 +60,7 @@
         </form>
     </div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script type="module" src="/js/signin.mjs"></script>    
+    <script type="module" src="/js/signin.mjs"></script>
+    <script type="module" src="/js/hide_links.mjs"></script>   
 </body>
 </html>
