last descriptions to functions and cleaning some code in the html files

--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
                 <li><a class="dropdown-item" href="#"></a></li>
             </ul>
     </div>
-    <div class="posts-feed d-flex flex-column justify-content-center align-items-center w-100 mt-5">
-    </div>
+    <div class="posts-feed d-flex flex-column justify-content-center align-items-center w-100 mt-5"></div>
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="js/post_feed_home.mjs"></script>
     <script type="module" src="js/search_filter.mjs"></script>
     <script type="module" src="js/posts/create.mjs"></script>
     <script type="module" src="js/redirect.mjs"></script>
-        
 </body>
 </html>
